force-app/main/default/objects/Course__c/fields/No_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours__c</fullName>
    <label>No of Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>