force-app/main/default/objects/Course__c/fields/No_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sessions__c</fullName>
    <label>No of Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>