force-app/main/default/objects/Course__c/fields/No_of_students_Registered__c.field-meta.xml
<CustomField>
    <fullName>No_of_students_Registered__c</fullName>
    <label>No of students Registered</label>
    <summaryForeignKey>Purchase__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>