force-app/main/default/objects/Course__c/validationRules/Min_duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_duration</fullName>
    <active>true</active>
    <description>Course duration less than 10 hours is not permitted</description>
    <errorConditionFormula>No_of_Hours__c  &lt; 10</errorConditionFormula>
    <errorDisplayField>No_of_Hours__c</errorDisplayField>
    <errorMessage>The Course is too short.</errorMessage>
</ValidationRule>