force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Fees__c</columns>
    <columns>No_of_Hours__c</columns>
    <columns>No_of_students_Registered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>